<resources>
    <string name="app_name">LTOREVIWEEREXAM</string>
    <string name="reviewer">Reviewer</string>
    <string name="exam">Exam</string>
    <string name="studentdesc">The student’s permit is the permit that a future driver would be required to get if they plan on applying for the non-professional or the professional license.</string>
    <string name="nonprodesc">In this table, we will be giving you the updated list of the LTO fees for the different types of licenses which are non-professional license, professional license, and the conductor.</string>
    <string name="col1student">New Student’s Permit</string>
    <string name="col2student">Applcation Fee</string>
    <string name="col3student">₱100</string>
    <string name="col4student">Computer Fee</string>
    <string name="col5student">₱67.63</string>
    <string name="col6student">Student Permit Fee</string>
    <string name="col7student">₱150</string>
    <string name="col8student">TOTAL</string>
    <string name="col9student">₱317.63</string>
    <string name="col10student">TDC</string>
    <string name="col11student">₱2500-3000 </string>
    <string name="col1nonpro">New License Application</string>
    <string name="col2nonpro">Non-pro License</string>
    <string name="col3nonpro">Professional License</string>
    <string name="col4nonpro">Conductor License</string>
    <string name="col5nonpro">Applcation Fee</string>
    <string name="col6nonpro">₱100.00</string>
    <string name="col7nonpro">₱100.00</string>
    <string name="col8nonpro">₱100.00</string>
    <string name="col9nonpro">Computer Fee</string>
    <string name="col10nonpro">₱67.63</string>
    <string name="col11nonpro">₱67.63</string>
    <string name="col12nonpro">₱67.63</string>
    <string name="col13nonpro">License Fee</string>
    <string name="col14nonpro">₱585.00</string>
    <string name="col15nonpro">₱585.00</string>
    <string name="col16nonpro">₱585.00</string>
    <string name="col17nonpro">TOTAL</string>
    <string name="col18nonpro">₱820.26</string>
    <string name="col19nonpro">₱820.26</string>
    <string name="col20nonpro">₱820.26</string>
    <string name="col1fee">Pro and Non Pro Fee 2021</string>
    <string name="col2fee">TDC</string>
    <string name="col3fee">₱2300</string>
    <string name="col4fee">SP</string>
    <string name="col5fee">₱1,000</string>
    <string name="col6fee">PDC </string>
    <string name="col7fee">₱2,400</string>
    <string name="col1violation">No Helmet</string>
    <string name="col2violation">₱1,500</string>
    <string name="col3violation">Driving without Drivers License</string>
    <string name="col4violation">₱3,000</string>
    <string name="col5violation">Illegal parking</string>
    <string name="col6violation">₱1,000</string>
    <string name="col7violation">Disregarding Traffic Signs</string>
    <string name="col8violation">₱2,000</string>
    <string name="col9violation">Driving under the influence</string>
    <string name="col10violation">₱10,000</string>
    <string name="col11violation">Minor Driving Motorcycle</string>
    <string name="col12violation">₱3,000</string>
    <string name="col13violation">No O.R/C.R</string>
    <string name="col14violation">₱1,000</string>
    <string name="col15violation">No Plate Number</string>
    <string name="col16violation">₱5,000</string>
    <string name="col17violation">Dirty Plate Number</string>
    <string name="col18violation">₱5,000</string>
    <string name="col19violation">Not Firmly Attached Plate Number</string>
    <string name="col20violation">₱5,000</string>
    <string name="col21violation">No. Muffler</string>
    <string name="col22violation">₱5,000</string>
    <string name="col23violation">Improvised Muffler</string>
    <string name="col24violation">₱5,000</string>
    <string name="col25violation">No Signal Lights</string>
    <string name="col26violation">₱5,000</string>
    <string name="col27violation">No Tail Lights</string>
    <string name="col28violation">₱5,000</string>
    <string name="col29violation">No Break Lights</string>
    <string name="col30violation">₱5,000</string>
    <string name="col31violation">No Head Lights</string>
    <string name="col32violation">₱5,000</string>
    <string name="col33violation">Defective Breaks</string>
    <string name="col34violation">₱5,000</string>
    <string name="col35violation">No Side Mirror</string>
    <string name="col36violation">₱5,000</string>
    <string name="col39violation">No Horn</string>
    <string name="col40violation">₱5,000</string>
    <string name="col41violation">Violation</string>
    <string name="col42violation">Penalties</string>
    <string name="queston_number">1/60 Question</string>
    <string name="Score">Score 0/60</string>
    <string name="question_1">A double solid yellow line with broken white line in between mean</string>
    <string name="question1_A">Absolutely no overtaking</string>
    <string name="question1_B">You can go overtake</string>
    <string name="question1_C">Overtake by passing over the solid white line</string>
    <string name="question1_D">Slow down gradually and give him the signal to overtake you</string>
    <string name="answer_1">Absolutely no overtaking </string>
    <string name="question_2">When you intend to turn right or left. Signal your intention at least</string>
    <string name="question2_A">Caution or warning sign</string>
    <string name="question2_B">Don\'t bother giving a signal</string>
    <string name="question2_C">Give a signal while no less than 30 meters before turning</string>
    <string name="question2_D">25 meters before you intend to make your turn </string>
    <string name="answer_2">25 meters before you intend to make your turn </string>
    <string name="question_3">At an intersection with a traffic light, make a left turn only when</string>
    <string name="question3_A">The green light is on and there is a left turn light</string>
    <string name="question3_B">The red light is on and there is a left turn light</string>
    <string name="question3_C">The yellow light is on and there is a left turn light</string>
    <string name="question3_D">Non of the above</string>
    <string name="answer_3">The green light is on and there is a left turn light</string>
    <string name="question_4">Graft and corruption in the traffic enforcement system can be eliminated by</string>
    <string name="question4_A">It separates traffic moving in opposite direction</string>
    <string name="question4_B">understanding the road and traffic rules and regulations</string>
    <string name="question4_C">self discipline by drivers and obeying traffic rules and regulations</string>
    <string name="question4_D">Non of the above</string>
    <string name="answer_4">self discipline by drivers and obeying traffic rules and regulations</string>
    <string name="question_5">On a four (4) lane road with single white line, you can</string>
    <string name="question5_A">Overtake by passing over the solid white line</string>
    <string name="question5_B">Overtake by passing over the double yellow line</string>
    <string name="question5_C">Overtake by passing over the single yellow line</string>
    <string name="question5_D">Overtake by passing over the stop lane</string>
    <string name="answer_5">Overtake by passing over the solid white line</string>
    <string name="question_6">Traffic jam can be prevented if you</string>
    <string name="question6_A">drive within speed limit</string>
    <string name="question6_B">Keep opposing lanes open </string>
    <string name="question6_C">drive faster</string>
    <string name="question6_D">Slowdown</string>
    <string name="answer_6">Keep opposing lanes open </string>
    <string name="question_7">When making a U-turn you should</string>
    <string name="question7_A">increase speed to make the u-turn faster and safer</string>
    <string name="question7_B">check for traffic beside you and beat them to the spot</string>
    <string name="question7_C">Apply your brakes gently with steady pressure</string>
    <string name="question7_D">Check for traffic behind you and indicate your intentions with a left turn signal</string>
    <string name="answer_7">Check for traffic behind you and indicate your intentions with a left turn signal</string>
    <string name="question_8">Signs that are triangular in shape and with a red colored border are called</string>
    <string name="question8_A">Regulatory signs</string>
    <string name="question8_B">Caution or warning sign </string>
    <string name="question8_C">Informative signs</string>
    <string name="question8_D">Make signal</string>
    <string name="answer_8">Caution or warning sign</string>
    <string name="question_9">Signs that are round, inverted triangle or octagonal and with red colored boarders are called</string>
    <string name="question9_A">Regulatory signs</string>
    <string name="question9_B">Informative signs</string>
    <string name="question9_C">Caution or warning sign</string>
    <string name="question9_D">Make signal</string>
    <string name="answer_9">Regulatory signs</string>
    <string name="question_10">When a driver of PUV refuses to render service, convey passengers, such violation is penalize with</string>
    <string name="question10_A">Fine of Php 1, 000</string>
    <string name="question10_B">Fine of Php 2, 000</string>
    <string name="question10_C">Fine of Php 3, 000</string>
    <string name="question10_D">Fine of Php 4, 000</string>
    <string name="answer_10">Fine of Php 1, 000</string>
    <string name="question_11">Single with broken line on a two-lane road means</string>
    <string name="question11_A">It separates traffic moving in slow down directions</string>
    <string name="question11_B">It separates traffic moving in right directions</string>
    <string name="question11_C">It separates traffic moving in opposite directions</string>
    <string name="question11_D">It separates traffic moving in left directions</string>
    <string name="answer_11">It separates traffic moving in opposite directions</string>
    <string name="question_12">What to do when you approach a crosswalk or pedestrian lane</string>
    <string name="question12_A">Stop and yield to pedestrians</string>
    <string name="question12_B">Pedestrians are not allowed to cross the pedestrian lanes</string>
    <string name="question12_C">Pedestrians crossing within a crosswalk</string>
    <string name="question12_D">Always exercise care for pedestrians and other road users around</string>
    <string name="answer_12">Stop and yield to pedestrians</string>
    <string name="question_13">Driving an unregistered motor vehicle is a violation with a fine of</string>
    <string name="question13_A">Php 10, 000</string>
    <string name="question13_B">Php 15, 000</string>
    <string name="question13_C">Php 13, 000</string>
    <string name="question13_D">Php 12, 000</string>
    <string name="answer_13">Php 10, 000</string>
    <string name="question_14">Considered a parking violation?</string>
    <string name="question14_A">Parking within 15 meters from a signalized intersect</string>
    <string name="question14_B">Parking within 3 meters from a signalized intersect</string>
    <string name="question14_C">Parking within 10 meters from a signalized intersect</string>
    <string name="question14_D">Parking within 5 meters from a signalized intersect</string>
    <string name="answer_14">Parking within 5 meters from a signalized intersect</string>
    <string name="question_15">Green light at an intersection means</string>
    <string name="question15_A">Stop and yield to pedestrians</string>
    <string name="question15_B">Pedestrians are allowed to cross the pedestrian lane</string>
    <string name="question15_C">Pedestrians are not allowed to cross the pedestrian lane</string>
    <string name="question15_D">Go and yield to pedestrians</string>
</resources>